--- a/src/main/resources/assets/endless_deep_space/lang/en_us.json
+++ b/src/main/resources/assets/endless_deep_space/lang/en_us.json
@@ -5,12 +5,13 @@
   "message.fly.endless_deep_space.on": "Fly is on",
   "block.endless_deep_space.custom.transparent_sign": "Transparent Sign",
   "effect.endless_deep_space.man_machine_separation": "Man-machine separation",
-  "block.endless_deep_space.custom.nihility_block": "Nihility",
   "key.endless_deep_space.through_the_wall": "Through The Wall",
-  "subtitles.genshin_impact_main_theme": "",
+  "block.endless_deep_space.custom.nihility_block": "Nihility",
   "advancements.die_of_ender_erosion.title": "You need to prepare some ender erosion protection potion!",
+  "subtitles.genshin_impact_main_theme": "",
   "outOfMemory.error": "Out of memory!",
   "death.attack.broken_value": "%1$s died painfully in the erosion of the broken",
+  "advancements.open_endless_deep_space_credits.descr": "Open Endless Deep Space Credits",
   "block.endless_deep_space.geocentric_grass_block": "Geocentric Grass Block",
   "item.endless_deep_space.frozen_sword": "Frozen Sword",
   "entity.endless_deep_space.custom.ender_dragon_wind_bomb": "Ender Dragon Wind Bomb",
@@ -179,7 +180,6 @@
   "entity.endless_deep_space.custom.penetrating_bow_arrow": "Penetrating Bow Arrow",
   "item.endless_deep_space.f": "F",
   "item.minecraft.potion.effect.damage_increase_potion": "Potion of Damage Increase",
-  "item.endless_deep_space.d": "D",
   "block.endless_deep_space.custom.star_cube_end_portal": "Star Cube",
   "enchantment.endless_deep_space.sharpness_weakened": "Sharpness Weakened",
   "endless_deep_space.attribute.damage_protection_time": "Damage Protection Time",
@@ -231,6 +231,7 @@
   "item.endless_deep_space.detector_of_broken.show_type.always": "Mode: always on display",
   "block.endless_deep_space.custom.red_guiding_stone": "Red Guiding Stone",
   "block.endless_deep_space.water_absorber": "Water Absorber",
+  "advancements.open_endless_deep_space_credits.title": "没想到啊！你居然会看！",
   "advancements.die_of_lightning_bolt.title": "The lucky one",
   "enchantment.endless_deep_space.best_sharpness.warning_info": "WARNING: This level of enchantment may cause the mob to have NaN health, please be careful!",
   "key.endless_deep_space.quickly_force_stop_the_java_virtual_machine": "Quickly Force Stop The Java Virtual Machine",
