--- a/src/main/resources/assets/endless_deep_space/lang/zh_cn.json
+++ b/src/main/resources/assets/endless_deep_space/lang/zh_cn.json
@@ -11,6 +11,7 @@
   "advancements.die_of_ender_erosion.title": "你需要准备点末影侵蚀防护药水！",
   "outOfMemory.error": "内存耗尽",
   "death.attack.broken_value": "%1$s在崩坏的侵蚀中痛苦的死去了",
+  "advancements.open_endless_deep_space_credits.descr": "打开无尽深空模组鸣谢名单",
   "block.endless_deep_space.geocentric_grass_block": "地心草方块",
   "item.endless_deep_space.frozen_sword": "寒冰剑",
   "entity.endless_deep_space.custom.ender_dragon_wind_bomb": "末影龙风弹",
@@ -18,10 +19,10 @@
   "entity.minecraft.villager.endless_deep_space.custom.recycler": "资源回收者",
   "subtitles.entity.mad_witch.block": "疯女巫：格挡",
   "block.endless_deep_space.custom.lime_guiding_stone": "黄绿色指路石",
-  "advancements.die_of_starve.descr": "死于饥饿",
-  "subtitles.entity.endless_deep_space.mad_witch.block": "疯女巫：格挡",
-  "item.endless_deep_space.detector_of_broken.show_type.right_click": "模式：右键点击显示",
   "effect.endless_deep_space.custom.damage_increase": "伤害增加",
+  "item.endless_deep_space.detector_of_broken.show_type.right_click": "模式：右键点击显示",
+  "subtitles.entity.endless_deep_space.mad_witch.block": "疯女巫：格挡",
+  "advancements.die_of_starve.descr": "死于饥饿",
   "endless_deep_space.attribute.fall_damage_reduction": "摔落伤害减免",
   "item.endless_deep_space.frozen_axe": "寒冰斧",
   "advancements.when_you_look_long_into_an_abyss_the_abyss_looks_into_you.title": "当你凝视深渊的时候，深渊也在凝视你",
@@ -116,7 +117,7 @@
   "item.endless_deep_space.guide_book": "无尽深空手册",
   "advancements.endless_deep_space_all_root.descr": "一切的开始",
   "item.endless_deep_space.music_disc_intertwined.desc": "是如梦呀rumeng2233 - 交织而声",
-  "item.endless_deep_space.fps.help.on": "此物品没有任何用处，它只是一个测试物品,并且手持此物品会导致帧率暴跌",
+  "item.endless_deep_space.fps.help.on": "此物品没有任何用处，它只是一个测试物品，并且手持此物品会导致帧率暴跌",
   "block.endless_deep_space.custom.blue_guiding_stone": "蓝色指路石",
   "block.endless_deep_space.custom.pink_guiding_stone": "粉红色指路石",
   "go_to_nihility_toast_descr": "你终将归于虚无",
@@ -179,7 +180,6 @@
   "entity.endless_deep_space.custom.penetrating_bow_arrow": "穿透弓箭",
   "item.endless_deep_space.f": "F",
   "item.minecraft.potion.effect.damage_increase_potion": "伤害增加药水",
-  "item.endless_deep_space.d": "D",
   "block.endless_deep_space.custom.star_cube_end_portal": "星空方块",
   "enchantment.endless_deep_space.sharpness_weakened": "锋利削弱",
   "endless_deep_space.attribute.damage_protection_time": "伤害保护时间",
@@ -231,6 +231,7 @@
   "item.endless_deep_space.detector_of_broken.show_type.always": "模式：一直显示",
   "block.endless_deep_space.custom.red_guiding_stone": "红色指路石",
   "block.endless_deep_space.water_absorber": "水吸收器",
+  "advancements.open_endless_deep_space_credits.title": "没想到啊！你居然会看！",
   "advancements.die_of_lightning_bolt.title": "幸运儿",
   "enchantment.endless_deep_space.best_sharpness.warning_info": "警告：此等级的附魔可能会导致生物出现NaN血量，请务必小心！",
   "key.endless_deep_space.quickly_force_stop_the_java_virtual_machine": "快速强制停止 Java 虚拟机",
